--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    
+    <main>
+        <section>
+            <h1>Get the freedom you deserve</h1>
+        </section>
+        <section>
+            <h1>Choose your plan.</h1>
+        </section>
+    </main>
 </body>
 </html>
