--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS</title>
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <main>
-        <section>
+        <section id="product-overview">
             <h1>Get the freedom you deserve</h1>
         </section>
-        <section>
-            <h1>Choose your plan.</h1>
+        <section id="plans">
+            <h1 class="section-title">Choose your plan.</h1>
+            <p>Some text goes here ... !</p>
         </section>
     </main>
 </body>
